/**
 * @file Unit тесты для dto/VerifyEmailRequest.ts
 * Полное покрытие запроса подтверждения email
 */

import { describe, expect, it } from 'vitest';

import type { ClientContext } from '../../../src/domain/ClientContext.js';
import type { VerifyEmailRequest } from '../../../src/dto/VerifyEmailRequest.js';
// Примечание: схема verifyEmailRequestSchema не соответствует DTO VerifyEmailRequest
// Схема требует token и email, но DTO содержит только token
// Тесты проверяют структуру DTO вручную

// ============================================================================
// 🔧 HELPER FUNCTIONS FOR TEST DATA
// ============================================================================

function createClientContext(overrides: Partial<ClientContext> = {}): ClientContext {
  return {
    ip: '192.168.1.1',
    deviceId: 'device-123',
    userAgent: 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)',
    locale: 'en-US',
    timezone: 'UTC',
    geo: {
      lat: 55.7558,
      lng: 37.6173,
    },
    sessionId: 'session-abc',
    appVersion: '1.0.3',
    ...overrides,
  };
}

function createVerifyEmailRequest(overrides: Partial<VerifyEmailRequest> = {}): VerifyEmailRequest {
  return {
    dtoVersion: '1.0',
    token: 'confirmation-token-123',
    clientContext: createClientContext(),
    redirectUrl: 'https://app.example.com/verified',
    ...overrides,
  };
}

function createMinimalVerifyEmailRequest(
  overrides: Partial<VerifyEmailRequest> = {},
): VerifyEmailRequest {
  return {
    token: 'confirmation-token-minimal',
    ...overrides,
  };
}

function createFullVerifyEmailRequest(
  overrides: Partial<VerifyEmailRequest> = {},
): VerifyEmailRequest {
  return {
    dtoVersion: '1.1',
    token: 'confirmation-token-full',
    clientContext: createClientContext({
      ip: '10.0.0.1',
      deviceId: 'device-full',
      userAgent: 'Mozilla/5.0 (Linux; Android 10)',
      locale: 'ru-RU',
      timezone: 'Europe/Moscow',
      geo: {
        lat: 59.9343,
        lng: 30.3351,
      },
      sessionId: 'session-full',
      appVersion: '2.0.0',
    }),
    redirectUrl: 'https://app.example.com/verified?source=email',
    ...overrides,
  };
}

// ============================================================================
// 📋 VERIFY EMAIL REQUEST - Полный DTO
// ============================================================================

describe('VerifyEmailRequest полный DTO', () => {
  it('создает минимальный запрос (обязательное поле token)', () => {
    const request = createMinimalVerifyEmailRequest();

    expect(request.token).toBe('confirmation-token-minimal');
    expect(request.dtoVersion).toBeUndefined();
    expect(request.clientContext).toBeUndefined();
    expect(request.redirectUrl).toBeUndefined();
  });

  it('создает полный запрос со всеми полями', () => {
    const request = createFullVerifyEmailRequest();

    expect(request.dtoVersion).toBe('1.1');
    expect(request.token).toBe('confirmation-token-full');
    expect(request.clientContext).toBeDefined();
    expect(request.redirectUrl).toBe('https://app.example.com/verified?source=email');
  });

  it('работает с базовым запросом', () => {
    const request = createVerifyEmailRequest();

    expect(request.token).toBe('confirmation-token-123');
    expect(request.clientContext).toBeDefined();
  });
});

// ============================================================================
// 📋 VERIFY EMAIL REQUEST - Required fields
// ============================================================================

describe('VerifyEmailRequest required fields', () => {
  it('token обязателен для confirmation token', () => {
    const request: VerifyEmailRequest = {
      token: 'confirmation-token-required',
    };

    expect(request.token).toBe('confirmation-token-required');
  });

  it('token может быть различными форматами', () => {
    const formats = [
      'confirmation-token-123',
      'token-abc-xyz',
      'verify_1234567890',
      'TOKEN-UPPERCASE',
      'token-with-dashes-and-underscores',
    ];

    formats.forEach((token) => {
      const request = createVerifyEmailRequest({
        token,
      });

      expect(request.token).toBe(token);
    });
  });

  it('token может быть длинной строкой', () => {
    const longToken = `token-${'a'.repeat(500)}`;
    const request = createVerifyEmailRequest({
      token: longToken,
    });

    expect(request.token).toBe(longToken);
    expect(request.token.length).toBeGreaterThan(500);
  });
});

// ============================================================================
// 📋 VERIFY EMAIL REQUEST - Optional fields
// ============================================================================

describe('VerifyEmailRequest optional fields', () => {
  it('dtoVersion опционально для версии DTO', () => {
    const request = createMinimalVerifyEmailRequest();

    expect(request.dtoVersion).toBeUndefined();
  });

  it('clientContext опционально для клиентского контекста', () => {
    const request = createMinimalVerifyEmailRequest();

    expect(request.clientContext).toBeUndefined();
  });

  it('redirectUrl опционально для redirect URL', () => {
    const request = createMinimalVerifyEmailRequest();

    expect(request.redirectUrl).toBeUndefined();
  });
});

// ============================================================================
// 📋 VERIFY EMAIL REQUEST - ClientContext
// ============================================================================

describe('VerifyEmailRequest clientContext', () => {
  it('clientContext может содержать IP адрес', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext({
        ip: '192.168.1.1',
      }),
    });

    expect(request.clientContext?.ip).toBe('192.168.1.1');
  });

  it('clientContext может содержать deviceId', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext({
        deviceId: 'device-xyz',
      }),
    });

    expect(request.clientContext?.deviceId).toBe('device-xyz');
  });

  it('clientContext может содержать userAgent', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext({
        userAgent: 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)',
      }),
    });

    expect(request.clientContext?.userAgent).toBe('Mozilla/5.0 (Windows NT 10.0; Win64; x64)');
  });

  it('clientContext может содержать geo координаты', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext({
        geo: {
          lat: 55.7558,
          lng: 37.6173,
        },
      }),
    });

    expect(request.clientContext?.geo?.lat).toBe(55.7558);
    expect(request.clientContext?.geo?.lng).toBe(37.6173);
  });

  it('clientContext может содержать все поля', () => {
    const request = createFullVerifyEmailRequest();

    expect(request.clientContext?.ip).toBe('10.0.0.1');
    expect(request.clientContext?.deviceId).toBe('device-full');
    expect(request.clientContext?.userAgent).toBe('Mozilla/5.0 (Linux; Android 10)');
    expect(request.clientContext?.locale).toBe('ru-RU');
    expect(request.clientContext?.timezone).toBe('Europe/Moscow');
    expect(request.clientContext?.geo).toBeDefined();
    expect(request.clientContext?.sessionId).toBe('session-full');
    expect(request.clientContext?.appVersion).toBe('2.0.0');
  });
});

// ============================================================================
// 📋 VERIFY EMAIL REQUEST - Edge cases
// ============================================================================

describe('VerifyEmailRequest edge cases', () => {
  it('работает с различными версиями DTO', () => {
    const versions: ('1.0' | '1.1')[] = ['1.0', '1.1'];

    versions.forEach((version) => {
      const request = createVerifyEmailRequest({
        dtoVersion: version,
      });

      expect(request.dtoVersion).toBe(version);
    });
  });

  it('работает с различными форматами redirectUrl', () => {
    const urls = [
      'https://app.example.com/verified',
      'https://app.example.com/verified?source=email',
      'https://app.example.com/verified#success',
      'http://localhost:3000/verified',
    ];

    urls.forEach((redirectUrl) => {
      const request = createVerifyEmailRequest({
        redirectUrl,
      });

      expect(request.redirectUrl).toBe(redirectUrl);
    });
  });

  it('работает с различными форматами IP', () => {
    const ipFormats = [
      '192.168.1.1',
      '10.0.0.1',
      '172.16.0.1',
      '::1',
      '2001:0db8:85a3:0000:0000:8a2e:0370:7334',
    ];

    ipFormats.forEach((ip) => {
      const request = createVerifyEmailRequest({
        clientContext: createClientContext({
          ip,
        }),
      });

      expect(request.clientContext?.ip).toBe(ip);
    });
  });
});

// ============================================================================
// 📋 VERIFY EMAIL REQUEST - Immutability
// ============================================================================

describe('VerifyEmailRequest immutability', () => {
  it('все поля readonly - предотвращает мутацию', () => {
    const request: VerifyEmailRequest = {
      token: 'token-immutable',
    };

    // TypeScript предотвращает мутацию
    // request.token = 'mutated'; // TypeScript error: Cannot assign to 'token' because it is a read-only property

    expect(request.token).toBe('token-immutable');
  });

  it('clientContext readonly - предотвращает мутацию вложенных объектов', () => {
    const request: VerifyEmailRequest = {
      token: 'token-immutable',
      clientContext: createClientContext({
        ip: '192.168.1.1',
        deviceId: 'device-immutable',
      }),
    };

    // TypeScript предотвращает мутацию clientContext
    // request.clientContext!.ip = 'mutated'; // TypeScript error: Cannot assign to 'ip' because it is a read-only property

    expect(request.clientContext?.ip).toBe('192.168.1.1');
  });

  it('clientContext geo readonly - предотвращает мутацию координат', () => {
    const request: VerifyEmailRequest = {
      token: 'token-immutable',
      clientContext: createClientContext({
        geo: {
          lat: 55.7558,
          lng: 37.6173,
        },
      }),
    };

    // TypeScript предотвращает мутацию geo
    // request.clientContext!.geo!.lat = 0; // TypeScript error: Cannot assign to 'lat' because it is a read-only property

    expect(request.clientContext?.geo?.lat).toBe(55.7558);
    expect(request.clientContext?.geo?.lng).toBe(37.6173);
  });
});

// ============================================================================
// 📋 VERIFY EMAIL REQUEST - Comprehensive snapshots
// ============================================================================

describe('VerifyEmailRequest comprehensive snapshots', () => {
  it('full verify email request - полный snapshot', () => {
    const request = createFullVerifyEmailRequest();

    expect(request).toMatchSnapshot();
  });

  it('minimal verify email request - полный snapshot', () => {
    const request = createMinimalVerifyEmailRequest();

    expect(request).toMatchSnapshot();
  });

  it('verify email request with clientContext - полный snapshot', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext(),
    });

    expect(request).toMatchSnapshot();
  });

  it('verify email request with redirectUrl - полный snapshot', () => {
    const request = createVerifyEmailRequest({
      redirectUrl: 'https://app.example.com/verified',
    });

    expect(request).toMatchSnapshot();
  });

  it('verify email request with all versions - полный snapshot', () => {
    const versions: ('1.0' | '1.1')[] = ['1.0', '1.1'];

    versions.forEach((version) => {
      const request = createVerifyEmailRequest({
        dtoVersion: version,
      });

      expect(request).toMatchSnapshot();
    });
  });
});

// ============================================================================
// 📋 ZOD SCHEMA VALIDATION
// ============================================================================

describe('Zod schema validation', () => {
  it('валидные verify email requests проходят Zod схему', () => {
    // Примечание: схема verifyEmailRequestSchema требует token и email,
    // но DTO VerifyEmailRequest содержит только token
    // Тесты проверяют структуру DTO вручную

    const request = createVerifyEmailRequest({
      token: 'confirmation-token-123',
    });

    expect(request.token).toBe('confirmation-token-123');
  });

  it('token обязателен для confirmation token', () => {
    const request: VerifyEmailRequest = {
      token: 'confirmation-token-required',
    };

    expect(request.token).toBe('confirmation-token-required');
  });

  it('token валидируется как строка', () => {
    const request = createVerifyEmailRequest({
      token: 'confirmation-token-valid',
    });

    expect(request.token).toBe('confirmation-token-valid');
    expect(typeof request.token).toBe('string');
  });

  it('dtoVersion опционально для версии DTO', () => {
    const request = createMinimalVerifyEmailRequest();

    expect(request.dtoVersion).toBeUndefined();
  });

  it('clientContext опционально для клиентского контекста', () => {
    const request = createMinimalVerifyEmailRequest();

    expect(request.clientContext).toBeUndefined();
  });

  it('clientContext может содержать IP для аудита', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext({
        ip: '192.168.1.1',
      }),
    });

    expect(request.clientContext?.ip).toBe('192.168.1.1');
  });

  it('clientContext может содержать deviceId для аудита', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext({
        deviceId: 'device-audit',
      }),
    });

    expect(request.clientContext?.deviceId).toBe('device-audit');
  });

  it('clientContext может содержать userAgent для аудита', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext({
        userAgent: 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)',
      }),
    });

    expect(request.clientContext?.userAgent).toBe('Mozilla/5.0 (Windows NT 10.0; Win64; x64)');
  });

  it('clientContext может содержать geo координаты для аудита', () => {
    const request = createVerifyEmailRequest({
      clientContext: createClientContext({
        geo: {
          lat: 55.7558,
          lng: 37.6173,
        },
      }),
    });

    expect(request.clientContext?.geo?.lat).toBe(55.7558);
    expect(request.clientContext?.geo?.lng).toBe(37.6173);
  });

  it('redirectUrl опционально для redirect URL', () => {
    const request = createMinimalVerifyEmailRequest();

    expect(request.redirectUrl).toBeUndefined();
  });

  it('redirectUrl валидируется как строка', () => {
    const request = createVerifyEmailRequest({
      redirectUrl: 'https://app.example.com/verified',
    });

    expect(request.redirectUrl).toBe('https://app.example.com/verified');
    expect(typeof request.redirectUrl).toBe('string');
  });
});
