// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VerifyEmailRequest comprehensive snapshots > full verify email request - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "2.0.0",
    "deviceId": "device-full",
    "geo": {
      "lat": 59.9343,
      "lng": 30.3351,
    },
    "ip": "10.0.0.1",
    "locale": "ru-RU",
    "sessionId": "session-full",
    "timezone": "Europe/Moscow",
    "userAgent": "Mozilla/5.0 (Linux; Android 10)",
  },
  "dtoVersion": "1.1",
  "redirectUrl": "https://app.example.com/verified?source=email",
  "token": "confirmation-token-full",
}
`;

exports[`VerifyEmailRequest comprehensive snapshots > minimal verify email request - полный snapshot 1`] = `
{
  "token": "confirmation-token-minimal",
}
`;

exports[`VerifyEmailRequest comprehensive snapshots > verify email request with all versions - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "dtoVersion": "1.0",
  "redirectUrl": "https://app.example.com/verified",
  "token": "confirmation-token-123",
}
`;

exports[`VerifyEmailRequest comprehensive snapshots > verify email request with all versions - полный snapshot 2`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "dtoVersion": "1.1",
  "redirectUrl": "https://app.example.com/verified",
  "token": "confirmation-token-123",
}
`;

exports[`VerifyEmailRequest comprehensive snapshots > verify email request with clientContext - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "dtoVersion": "1.0",
  "redirectUrl": "https://app.example.com/verified",
  "token": "confirmation-token-123",
}
`;

exports[`VerifyEmailRequest comprehensive snapshots > verify email request with redirectUrl - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "dtoVersion": "1.0",
  "redirectUrl": "https://app.example.com/verified",
  "token": "confirmation-token-123",
}
`;
